; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/configurator/extr_file.c_on_config_enter.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/configurator/extr_file.c_on_config_enter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_file_configurator_t = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @on_config_enter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @on_config_enter(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.st_h2o_file_configurator_t*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = bitcast i32* %8 to i8*
  %10 = bitcast i8* %9 to %struct.st_h2o_file_configurator_t*
  store %struct.st_h2o_file_configurator_t* %10, %struct.st_h2o_file_configurator_t** %7, align 8
  %11 = load %struct.st_h2o_file_configurator_t*, %struct.st_h2o_file_configurator_t** %7, align 8
  %12 = getelementptr inbounds %struct.st_h2o_file_configurator_t, %struct.st_h2o_file_configurator_t* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 1
  store %struct.TYPE_2__* %14, %struct.TYPE_2__** %12, align 8
  %15 = load %struct.st_h2o_file_configurator_t*, %struct.st_h2o_file_configurator_t** %7, align 8
  %16 = getelementptr inbounds %struct.st_h2o_file_configurator_t, %struct.st_h2o_file_configurator_t* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i64 -1
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @dup_strlist(i32 %20)
  %22 = load %struct.st_h2o_file_configurator_t*, %struct.st_h2o_file_configurator_t** %7, align 8
  %23 = getelementptr inbounds %struct.st_h2o_file_configurator_t, %struct.st_h2o_file_configurator_t* %22, i32 0, i32 0
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i64 0
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 1
  store i32 %21, i32* %26, align 4
  %27 = load %struct.st_h2o_file_configurator_t*, %struct.st_h2o_file_configurator_t** %7, align 8
  %28 = getelementptr inbounds %struct.st_h2o_file_configurator_t, %struct.st_h2o_file_configurator_t* %27, i32 0, i32 0
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i64 -1
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = load %struct.st_h2o_file_configurator_t*, %struct.st_h2o_file_configurator_t** %7, align 8
  %34 = getelementptr inbounds %struct.st_h2o_file_configurator_t, %struct.st_h2o_file_configurator_t* %33, i32 0, i32 0
  %35 = load %struct.TYPE_2__*, %struct.TYPE_2__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i64 0
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 0
  store i32 %32, i32* %37, align 4
  ret i32 0
}

declare dso_local i32 @dup_strlist(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
